# PixelProject-v3-Rust

./: Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/components/: camera_controller.rs  mod.rs  world_chunk.rs
src/components/util/: fps_text.rs  mod.rs
src/constant/: chunk.rs  mod.rs  world.rs
src/constant/pixels/: base_pixel.rs  mod.rs  sand_pixel.rs  space_pixel.rs
src/resources/: chunk_map.rs
src/systems/: camera_movement.rs  exit_on_esc.rs  mod.rs  pixel_masks.rs  world.rs
src/systems/physics/: mod.rs  sand_step.rs
