[package]
name = "pixel_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
clippy = "0.0.302"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.1"
bytemuck = "1.16.2"
rand = "0.8"

# Dev Profile
[profile.dev]
opt-level = 1

# Release Profile
[profile.release]
opt-level = 3
